--- a/style.css
+++ b/style.css
@@ -31,13 +31,13 @@ h2{
 
 h3{
     color: rgb(59, 68, 147);
-    font-size: 10px;
+    font-size: 9px;
+    margin: 7px;
 }
 
 #my-team-container  {
     display: flex;
     justify-content: space-between;
-    align-items: center;
     gap: 65px;
 }
 
@@ -89,36 +89,33 @@ h3{
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
     height: 2.5px;
-    background-color: rgb(220, 218, 218);
+    background-color: rgb(227, 223, 223);
     border-radius: 5px;
-    outline: none;
-    border: 1.5px outset rgb(139, 135, 135);
+    border: 1.5px outset rgb(152, 146, 146);
     margin: 0px;
 }
 
 input[type="range"]::-webkit-slider-thumb {
-    appearance:unset;
     width: 13px;
     height: 13px;
-    background: rgb(59, 68, 147);
     cursor: pointer;
     border-radius: 50%;
 }
 
 .range-value{
-    display: inline-block;
-    width: 25px;
-    font-weight: bold;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    width: 35px;
     background-color: rgb(73, 73, 73);
     color: white;
-    font-size: 10px;
-    padding: 2px 1.5px;
+    font-size: 8px;
+    padding: 2px;
     border-radius: 3px;
     margin:0px;
 }
-
 
 input[type="submit"]{
     background-color: rgb(59, 68, 147);
@@ -126,4 +123,46 @@ input[type="submit"]{
     font-size: 10px;
     border-radius: 5px;
     margin: 10px;
+}
+
+table{
+    width: 300px;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+th{
+    border: 1px solid rgb(0, 0, 0);
+    background-color: rgb(223, 95, 95);
+    padding: 10px;
+    text-align: center;
+    font-size: 13PX;
+}
+td{
+    border: 1px solid rgb(0, 0, 0);
+    font-size: 12px;
+    padding: 10px;
+    padding-right: 5px;
+}
+
+button{
+    color: rgb(231, 231, 231);
+    background-color: rgb(59, 68, 147);
+    font-size: 10px;
+    border: none;
+    border-radius: 4px;
+    width: 100px;
+    height: auto;
+    font-size: 12px;
+    padding: 10px;
+}
+
+h4{
+    font-size: 10px;
+    margin: 0 0 5px 0;
+}
+
+p{
+    font-size: 10px;
+    margin-bottom: 3px
 }
