--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ input[type="submit"]{
 }
 
 table{
-    width: 300px;
+    width: 410Px;
     border-collapse: collapse;
     margin-top: 20px;
 }
@@ -141,8 +141,8 @@ th{
 td{
     border: 1px solid rgb(0, 0, 0);
     font-size: 12px;
-    padding: 10px;
-    padding-right: 5px;
+    padding: 7px;
+    text-align: center;
 }
 
 button{
@@ -166,3 +166,8 @@ p{
     font-size: 10px;
     margin-bottom: 3px
 }
+
+button:hover{
+    background-color: rgb(223, 95, 95);
+}
+
