--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ input[type="submit"]{
 }
 
 table{
-    width: 410Px;
+    width: 410px;
     border-collapse: collapse;
     margin-top: 20px;
 }
